--- a/iSignage/View/Base.lproj/Main.storyboard
+++ b/iSignage/View/Base.lproj/Main.storyboard
@@ -121,7 +121,7 @@
         <!--Sign View Controller-->
         <scene sceneID="LPQ-hC-mhL">
             <objects>
-                <viewController id="1Be-dr-TwG" customClass="SignViewController" sceneMemberID="viewController">
+                <viewController id="1Be-dr-TwG" customClass="SignViewController" customModule="iSignage" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BLG-Q4-31J">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
